*fixed spacing bug

--- a/timetables/style.css
+++ b/timetables/style.css
@@ -16,6 +16,9 @@
 }
 
 
+h1 { margin: auto; }
+
+
 /* buttons */
 button {
     color: var(--primary-text);
@@ -34,8 +37,11 @@ button {
 /* wrapper */
 #tables-wrapper {
     display: flex;
+    margin: auto;
     justify-content: space-between;
     flex-wrap: wrap;
+    width: 600px;
+    max-width: calc(100vw - 50px);
 }
     /* timetable buttons wrapper */
     #buttons {
@@ -88,25 +94,26 @@ button {
         /* table titles */
         #user-wrapper h1, #output-wrapper h1 {
             font-size: 1rem;
-            text-align: center;
-            margin: 0;
-            padding: 3px 20px;
             border-bottom: 1px solid transparent;
         }
             #user-wrapper h1 {
                 border-radius: 3px 3px 0 0;
                 background-color: transparent;
-                width: max-content;
-                max-width: 150px;
-                margin: auto;
                 white-space: nowrap;
                 overflow: hidden;
+                padding: 0 10px;
                 border-bottom: 1px solid #aaaaaa55;
+                max-width: 100px;
             }
                 #user-wrapper h1:focus {
                     background-color: #aaaaaa11;
                     border-bottom: 1px solid #aaaaaa;
                 }
+        .table-header {
+            width: 150px;
+            margin: auto;
+            text-align: center;
+        }
         /* initially hide user tables */
         .user { display: none; }
         #user-caption, #comparison-caption {
